<resources>
    <string name="app_name">MyFollower</string>
    <string name="followerCoin">سکه فالوئر</string>
    <string name="likeCoin">سکه لایک</string>
    <string name="logOut">خروج از حساب</string>
    <string name="search">جست و جو</string>
    <string name="support">پشتیبانی</string>
    <string name="aboutUs">درباره ما</string>
    <string name="shareApp">اشتراک برنامه</string>
    <string name="setting">تنظیمات</string>
    <string name="transferCoin">انتقال سکه</string>
    <string name="accountInfo">آمار اکانت</string>
    <string name="manageAccount">مدیریت اکانت</string>
    <string name="topUsers">برترین ها</string>
    <string name="like">لایک</string>
    <string name="comment">کامنت</string>
    <string name="follower">فالوئر</string>
    <string name="likeRobot">ربات لایک</string>
    <string name="chooseImage">انتخاب عکس</string>
    <string name="purchase">ثبت سفارش</string>
    <string name="purchaseWithCoin">ثبت سفارش با سکه</string>
    <string name="doLike">لایک کن</string>
    <string name="autoLike">لایک خودکار</string>
    <string name="likeWithAllAccounts">لایک با تمامی اکانت ها</string>
    <string name="doComment">کامنت کن</string>
    <string name="autoComment">کامنت خودکار</string>
    <string name="commentWithAllAccounts">کامنت با تمامی اکانت ها</string>
    <string name="doFollow">فالو کن</string>
    <string name="autoFollow">فالو خودکار</string>
    <string name="followWithAllAccounts">فالو با تمام اکانت ها</string>
    <string name="selectAccount">انتخاب اکانت</string>
    <string name="coinAmount">تعداد سکه</string>
    <string name="transfer">انتقال</string>
    <string name="noteTransferOne">انتقال سکه تنها به حساب هایی که با آن ها وارد برنامه شده اید قابل انجام است .</string>
    <string name="noteTransferTwo">حداقل میزان قابل انتقال ۱۰۰ سکه است.</string>
    <string name="doneOrder">سفارش شما انجام شد . از ۱۵۵ لایک درخواستی ۱۶ تا تحویل داده شد</string>
    <string name="change">تبدیل کن</string>
    <string name="submitYourFirstOrder">اولین سفارش خود را ثبت کنید!‌</string>
    <string name="rateUs">به ما امتیاز دهید</string>
    <string name="view">ویو</string>
    <string name="doView">ویو کن</string>
</resources>
