<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layoutDirection="ltr"
    android:background="@color/transparent"

    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llTabBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_margin="@dimen/_2sdp"
        android:textColor="@color/white"
        android:background="@drawable/rounded_top_blue_stroke"
        android:weightSum="4"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvLike"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:padding="@dimen/_3sdp"
            android:background="@drawable/rounded_main_un_selected"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/like" />

        <TextView
            android:id="@+id/tvComment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/rounded_main_un_selected"
            android:padding="@dimen/_3sdp"
            android:gravity="center"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:text="@string/comment"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvFollower"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="@dimen/_3sdp"
            android:textStyle="bold"
            android:background="@drawable/rounded_main_un_selected"
            android:padding="@dimen/_3sdp"
            android:textColor="@color/white"
            android:text="@string/follower" />

        <TextView
            android:id="@+id/tvRobotLike"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="3dp"
            android:layout_margin="@dimen/_5sdp"
            android:padding="@dimen/_3sdp"
            android:paddingBottom="3dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/rounded_main_un_selected"
            android:gravity="center"
            android:text="@string/view" />


    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPagerPurchases"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llTabBar"
        >

    </androidx.viewpager.widget.ViewPager>


</androidx.constraintlayout.widget.ConstraintLayout>
