<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/transparent"

        android:layoutDirection="ltr"
        android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llTabBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_margin="@dimen/_2sdp"
        android:background="@drawable/rounded_top_blue_stroke"

        android:weightSum="4"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvLike"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/_5sdp"
            android:padding="@dimen/_5sdp"
            android:background="@drawable/rounded_main_un_selected"
            android:gravity="center"
            android:paddingTop="3dp"
            android:textColor="@color/black"
            android:paddingBottom="3dp"
            android:text="@string/like" />

        <TextView
            android:id="@+id/tvComment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/black"
            android:paddingTop="3dp"
            android:layout_margin="@dimen/_5sdp"
            android:padding="@dimen/_5sdp"
            android:background="@drawable/rounded_main_un_selected"
            android:paddingBottom="3dp"
            android:text="@string/comment" />

        <TextView
            android:id="@+id/tvFollower"
            android:layout_width="0dp"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/rounded_main_un_selected"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:paddingTop="3dp"
            android:textColor="@color/black"
            android:paddingBottom="3dp"
            android:text="@string/follower" />
        <TextView
            android:id="@+id/tvView"
            android:layout_width="0dp"
            android:layout_margin="@dimen/_5sdp"
            android:padding="@dimen/_5sdp"

            android:background="@drawable/rounded_main_un_selected"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/black"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:text="@string/view" />



    </LinearLayout>
        <FrameLayout
            android:id="@+id/frmGetCoin"
            android:layout_width="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llTabBar"
            android:layout_height="0dp">

        </FrameLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPagerGetCoin"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="0dp"
        >

    </androidx.viewpager.widget.ViewPager>


</androidx.constraintlayout.widget.ConstraintLayout>

</layout>