<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layoutDirection="ltr">


            <ImageView
                android:id="@+id/imvPic"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/curved"
                app:layout_constraintBottom_toBottomOf="@id/guideLine2"
                app:layout_constraintEnd_toEndOf="@id/guideLine4"
                app:layout_constraintStart_toStartOf="@id/guideLine3"
                app:layout_constraintTop_toTopOf="@id/guideLine"
                app:srcCompat="@drawable/ic_user_avatar" />

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="@+id/guideLine4"
                app:layout_constraintStart_toStartOf="@id/guideLine3"
                app:layout_constraintTop_toBottomOf="@id/guideLine2">

                <Button
                    android:id="@+id/btnNext"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/rounded_five_roundness_grey"
                    android:text="بعدی"

                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btnReport"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/rounded_five_roundness"
                    android:text="گزارش"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvFollowerCoinCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2500"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/like_coin" />
            </LinearLayout>


            <Button
                android:id="@+id/btnDoFollow"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/rounded_grey_border"
                android:text="@string/doFollow"
                android:textColor="@color/darkerGrey"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/guideLine4"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="@+id/guideLine3"
                app:layout_constraintTop_toBottomOf="@+id/linear" />

            <ProgressBar
                android:id="@+id/prg"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/guideLine4"
                app:layout_constraintStart_toStartOf="@+id/guideLine3"
                app:layout_constraintTop_toBottomOf="@+id/linear" />

            <Button
                android:id="@+id/btnAutoFollow"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_grey_border"
                android:text="@string/autoFollow"
                android:textColor="@color/darkerGrey"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/btnDoFollow"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="@+id/btnDoFollow"
                app:layout_constraintTop_toBottomOf="@+id/btnDoFollow"
                app:layout_goneMarginStart="10dp" />

            <Button
                android:id="@+id/btnFollowWithAll"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_orange"
                android:text="@string/followWithAllAccounts"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/btnAutoFollow"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="@+id/btnAutoFollow"
                app:layout_constraintTop_toBottomOf="@+id/btnAutoFollow"
                app:layout_goneMarginStart="10dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideLine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideLine2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.4" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideLine3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.2" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideLine4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.8" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>
